fixed sizing issues and styled scrollbar

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -21,14 +21,35 @@
 
 body {
 	min-height: 100vh;
-
+	max-width: 100vw;
 	margin: 0;
 	background-attachment: fixed;
 	/* background-color: var(--color-bg-1); */
 	background-size: 100vw 100vh;
 	/* background: linear-gradient(180deg, #FFF 0%, #E2E2E2 100%); */
 	background-color: #F4F4F4;
+	overflow-x: hidden;
 
+}
+
+/* width */
+::-webkit-scrollbar {
+	width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background: #f16040;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+	background: #555;
 }
 
 h1,
